<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="E_ControlMode" Id="{b0885657-7658-0924-181e-609954663d8a}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE E_ControlMode :
(
	Position 	:= 0,
	Speed	 	:= 1
)
BYTE;
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>