<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="E_DS402State" Id="{eb5f6cee-6c16-00d4-3894-ab611d90e355}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
{attribute 'conditionalshow'}
TYPE E_DS402State :
(
	S0_NotReadyToSwitchOn,
	S1_SwitchOnDisabled,
	S2_ReadyToSwitchOn,
	S3_SwitchedOn,
	S4_OperationEnabled,
	S5_Fault,
	S6_FaultReactionActive,
	S7_QuickStopActive
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>